# Nexa-Core

./: 404.html  CMakeLists.txt  index.html  testnet-seeds.txt
.github/workflows/: deploy-docs.yml
assets/js/: 0058b4c6.f702f2fa.js  01a85c17.92783d89.js  0e384e19.3c2920df.js  14eb3368.359a6362.js  17896441.efff7422.js  18c41134.7ddb6b51.js  1dea6ca3.83d1c2e3.js  1e4232ab.d6b9da3c.js  1f391b9e.c45fc4a4.js  3042.a141a09a.js  3217192f.58cbc290.js  33fc5bb8.86d09fd6.js  36994c47.1195529f.js  393be207.4bf122ea.js  3a2db09e.55ed94fa.js  4622.ec188583.js  533a09ca.6100e3ec.js  59362658.d31459c1.js  5c868d36.66621240.js  5e90a9b3.a105cdf6.js  5e95c892.750b1705.js  621db11d.850228fb.js  6875c492.edde199f.js  6bb166bd.5dba26ca.js  73664a40.c0f1365c.js  7661071f.0046f261.js  814f3328.f1b9fed5.js  822bd8ab.6de1d154.js  8717b14a.b8327213.js  925b3f96.c8dd8f7b.js  9392.dab7193d.js  9e4087bc.4e69d0fb.js  a6aa9e1f.17e711f1.js  a7456010.d1a83fbf.js  a7bd4aaa.70aebd4b.js  a94703ab.a06c3ef9.js  aba21aa0.0f0dd343.js  acecf23e.45f4fd8b.js  c15d9823.694abf40.js  c4f5d8e4.6eeda273.js  (+15 more)
blog/: index.html
blog/archive/: index.html
blog/authors/: index.html
blog/authors/all-sebastien-lorber-articles/: index.html
blog/authors/yangshun/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/welcome/: index.html
docs/: API_REFERENCE.md  ARCHITECTURE.md
docs/intro/: index.html
include/: config.h
include/api/: api_server.h  explorer.h
include/blockchain/: block.h  blockchain.h
include/consensus/: pos.h  pow.h
include/layer2/: scaling.h
include/network/: p2p.h
include/transaction/: smart_contract.h  transaction.h
include/wallet/: wallet.h
markdown-page/: index.html
nexa-docs/: package-lock.json  package.json
sdk/: nexa_sdk.cpp  nexa_sdk.dart  nexa_sdk.h  nexa_sdk.js  nexa_sdk.py
src/: main.cpp
src/api/: api_server.cpp  explorer.cpp
src/blockchain/: block.cpp  blockchain.cpp
src/consensus/: pos.cpp  pow.cpp
src/layer2/: scaling.cpp
src/network/: p2p.cpp
src/transaction/: smart_contract.cpp  transaction.cpp
src/wallet/: wallet.cpp
(+14 files in other folders)
